css/style.css
/* ... */
@media (max-width: 768px) {

  .custom-navbar .navbar-brand {
    line-height: 20px;
  }

  #overview img,
  #products .col-md-4 {
    padding-top: 32px;
  }

  .nav-tabs > li > a {
    font-size: 13px;
  }
	
	.about-working-hours {
      border-left: 0;
      padding: 22px 0 0 0;
	}

}

@media (max-width: 760px) {

  #intro, #pulsHero {
    height: 100vh;
  }
	
	#plsFtrs img {
		max-height: 800px;
		max-width: 450px;
}

}

